Cleaned up some things but native header generation is still not working.